--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "renders react components given data to html",
   "scripts": {
     "lint": "eslint lib",
-    "test": "mocha"
+    "test": "mocha",
+    "bin": "enclose -o react-render-html ./bin/index.js",
+    "build": "pkg . --out-dir build"
   },
+  "pkg": {},
   "main": "index.js",
   "author": "Haithem Bel Haj <haithem@konek.to>",
   "license": "ISC",
-  "bin" : { "react-render-html" : "./bin/index.js" },
+  "bin": {
+    "react-render-html": "./bin/index.js"
+  },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -24,7 +29,9 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "enclose": "^2.2.0",
     "eslint": "^3.19.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "pkg": "^3.0.1"
   }
 }
