--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
     "bluebird": "^3.5.0",
+    "chalk": "^2.3.0",
     "debug": "^2.6.3",
     "dependency-tree": "^5.9.0",
     "eslint-plugin-react": "^6.10.3",
