--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "eslint-plugin-react": "^6.10.3",
     "meow": "^3.7.0",
     "react": "^16.1.0",
-    "react-dom": "^16.1.0"
+    "react-dom": "^16.1.0",
+    "serialize-error": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
     "mocha": "^3.2.0",
-    "pkg": "^4.3.0-beta.1"
+    "pkg": "^4.3.0"
   }
 }
