--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "rur": "./bin/index.js"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.1.1",
     "babel-register": "^6.24.1",
     "bluebird": "^3.5.0",
