--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "reenact",
+  "name": "@konekto/reenact",
   "version": "1.0.0",
   "description": "renders react components given data to html",
+  "homepage": "https://github.com/konekto/reenact",
   "scripts": {
     "lint": "eslint lib",
     "test": "mocha",
-    "bin": "enclose -o react-render-html ./bin/index.js",
     "build": "pkg ./ --out-dir build"
   },
   "main": "index.js",
   "author": "Haithem Bel Haj <haithem@konek.to>",
   "license": "ISC",
   "bin": {
-    "rur": "./bin/index.js"
+    "reenact": "./bin/index.js"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
