--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-register": "^6.24.1",
     "bluebird": "^3.5.0",
     "chalk": "^2.3.0",
+    "chokidar": "^2.0.3",
     "debug": "^2.6.3",
     "dependency-tree": "^5.9.0",
     "eslint-plugin-react": "^6.10.3",
