--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint lib",
     "test": "mocha",
-    "build": "pkg ./ --out-dir build"
+    "docker:push": "dc"
   },
   "main": "index.js",
   "author": "Haithem Bel Haj <haithem@konek.to>",
@@ -22,13 +22,12 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^3.1.1",
     "babel-register": "^6.26.0",
     "bluebird": "^3.5.0",
     "chalk": "^2.3.0",
     "chokidar": "^2.0.3",
     "debug": "^2.6.3",
-    "dependency-tree": "^5.9.0",
+    "dependency-tree": "^6.1.0",
     "eslint-plugin-react": "^6.10.3",
     "meow": "^3.7.0",
     "react": "^16.3.2",
@@ -37,7 +36,6 @@
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "mocha": "^3.2.0",
-    "pkg": "^4.3.1"
+    "mocha": "^5.2.0"
   }
 }
