--- a/package.json
+++ b/package.json
@@ -19,16 +19,14 @@
     "reenact": "./bin/index.js"
   },
   "dependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "@babel/core": "^7.4.5",
+    "@babel/register": "^7.4.4",
+    "@konekto/preset-react": "^1.0.3",
     "bluebird": "^3.5.0",
     "chalk": "^2.3.0",
     "chokidar": "^2.0.3",
     "debug": "^2.6.3",
     "dependency-tree": "^6.1.0",
-    "eslint-plugin-react": "^6.10.3",
     "meow": "^3.7.0",
     "react": "^16.3.2",
     "react-dom": "^16.1.0",
@@ -36,6 +34,7 @@
   },
   "devDependencies": {
     "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
     "mocha": "^5.2.0"
   }
 }
